Name intermediate results of Future composition, and other clarifications (#62)