@@ -129,11 +129,12 @@ public final class HarvestJobSchedulerServiceImpl implements HarvestJobScheduler
      *
      * @return A Future that succeeds if the saved jobs were restored
      */
-    @SuppressWarnings("rawtypes")
     Future<Void> initializeScheduler() {
         return myHarvestScheduleStoreService.listJobs().compose(jobs -> {
-            return CompositeFuture
-                    .all(jobs.stream().map(job -> (Future) scheduleJob(job.getID().get(), job, true)).toList());
+            final Stream<Future<Void>> jobSchedulings =
+                    jobs.stream().map(job -> scheduleJob(job.getID().get(), job, true));
+
+            return CompositeFuture.all(jobSchedulings.collect(Collectors.toList()));
         }).mapEmpty();
     }
 
@@ -190,7 +191,8 @@ public final class HarvestJobSchedulerServiceImpl implements HarvestJobScheduler
         /**
          * Per the docs for {@link org.quartz.Job}, a public no-argument constructor is required.
          */
-        @SuppressWarnings({ "PMD.UncommentedEmptyConstructor", "PMD.UnnecessaryConstructor" })
+        @SuppressWarnings({ "PMD.UncommentedEmptyConstructor", "PMD.UnnecessaryConstructor",
+            "checkstyle:RedundantModifier" })
         public RunHarvest() {
         }
 
